--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@
     margin-top: 50px;
 }
 #color-box{
-    height: 50px;
-    width: 100px;
+    height: 450px;
+    width: 600px;
     background-color: black;
+    border-radius: 10px;
 }
 #change-color-btn{
-    background-color: blue;
+    background-color: black;
     color: white;
     font-size: large;
     font-weight: bold;
